2009-11-20  Jaroslav Hajek  <highegg@gmail.com>

	* ov-bool.h (octave_bool::is_numeric_type): New overload.
	* ov-bool-mat.h (octave_bool-matrix::is_numeric_type): New overload.

2009-11-19  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base.h (unary_mapper_t): New member: umap_erfinv.
	* ov-base.c (octave_base_value::get_umap_name): Add "erfinv" here.
	* ov.h (octave_value::erfinv): New method.
	* ov-scalar.cc (octave_scalar::map): Handle umap_erfinv.
	* ov-float.cc (octave_float::map): Ditto.
	* ov-re-mat.cc (octave_matrix::map): Ditto.
	* ov-flt-re-mat.cc (octave_float_matrix::map): Ditto.
	* ov-re-sparse.cc (octave_sparse_matrix::map): Ditto.
	* mappers.cc (Ferfinv): New DEFUN.

2009-11-14  Shai Ayal  <shaiay@users.sourceforge.net>

	* gl-render.cc (opengl_renderer::text_to_pixels):
	New function from code in render_text to produce the pixels and
	compute bounding box.
	(opengl_renderer::render_text): Call text_to_pixels to compute
	rotation mode and bounding box.
	* gl-renger.h (opengl_renderer::text_to_pixels): Provide decl.
	* gl2ps-renderer.cc (glps_renderer::render_text):
	Call text_to_pixels to compute bounding box.
	(glps_renderer::set_font): Call opengl_renderer::set_font.

2009-11-18  Michael Godfrey  <godfrey@isl.stanford.edu>

	* txt-eng-ft.cc: Relax font match test.

2009-11-18  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/bsxfun.cc (bsxfun_builtin_op): New member:
	bsxfun_builtin_power.
	(bsxfun_builtin_names): Include "power".
	(do_bsxfun_real_pow): New static function.
	(maybe_fill_table): Register power handlers.

2009-11-13  Jaroslav Hajek  <highegg@gmail.com>

	* ov-complex.cc (octave_complex::try_narrowing_conversion): Don't
	check signbit.
	* ov-flt-complex.cc (octave_float_complex::try_narrowing_conversion):
	Ditto.
	* ov-cx-mat.cc (octave_complex_matrix::try_narrowing_conversion):
	Simplify. Don't check signbit.
	* ov-flt-cx-mat.cc
	(octave_float_complex_matrix::try_narrowing_conversion): Ditto.
